--- a/training_metrics.html
+++ b/training_metrics.html
@@ -9,10 +9,10 @@
 <body>
     <table>
 <thead>
-<tr><th style="text-align: right;">  accuracy</th><th style="text-align: right;">    loss</th><th style="text-align: right;">  step</th><th style="text-align: right;">  val_accuracy</th><th style="text-align: right;">  val_loss</th></tr>
+<tr><th style="text-align: right;">  accuracy</th><th style="text-align: right;">     loss</th><th style="text-align: right;">  step</th><th style="text-align: right;">  val_accuracy</th><th style="text-align: right;">  val_loss</th></tr>
 </thead>
 <tbody>
-<tr><td style="text-align: right;">    0.9525</td><td style="text-align: right;">0.111851</td><td style="text-align: right;">     9</td><td style="text-align: right;">       0.90375</td><td style="text-align: right;">  0.376123</td></tr>
+<tr><td style="text-align: right;">     0.964</td><td style="text-align: right;">0.0975366</td><td style="text-align: right;">    11</td><td style="text-align: right;">        0.8975</td><td style="text-align: right;">  0.375477</td></tr>
 </tbody>
 </table>
 <br>
@@ -25,62 +25,74 @@
     {
         "rev": "workspace",
         "step": "0",
-        "timestamp": "1623771560337",
-        "val_accuracy": "0.6875"
+        "timestamp": "1623772323844",
+        "val_accuracy": "0.8512499928474426"
     },
     {
         "rev": "workspace",
         "step": "1",
-        "timestamp": "1623771560736",
-        "val_accuracy": "0.8224999904632568"
+        "timestamp": "1623772324244",
+        "val_accuracy": "0.8949999809265137"
     },
     {
         "rev": "workspace",
         "step": "2",
-        "timestamp": "1623771561134",
-        "val_accuracy": "0.9087499976158142"
+        "timestamp": "1623772324664",
+        "val_accuracy": "0.9049999713897705"
     },
     {
         "rev": "workspace",
         "step": "3",
-        "timestamp": "1623771561537",
-        "val_accuracy": "0.8999999761581421"
+        "timestamp": "1623772325075",
+        "val_accuracy": "0.8974999785423279"
     },
     {
         "rev": "workspace",
         "step": "4",
-        "timestamp": "1623771561933",
-        "val_accuracy": "0.90625"
+        "timestamp": "1623772325473",
+        "val_accuracy": "0.8887500166893005"
     },
     {
         "rev": "workspace",
         "step": "5",
-        "timestamp": "1623771562342",
-        "val_accuracy": "0.8575000166893005"
+        "timestamp": "1623772325891",
+        "val_accuracy": "0.8612499833106995"
     },
     {
         "rev": "workspace",
         "step": "6",
-        "timestamp": "1623771562741",
-        "val_accuracy": "0.9024999737739563"
+        "timestamp": "1623772326306",
+        "val_accuracy": "0.8987500071525574"
     },
     {
         "rev": "workspace",
         "step": "7",
-        "timestamp": "1623771563146",
-        "val_accuracy": "0.9087499976158142"
+        "timestamp": "1623772326739",
+        "val_accuracy": "0.8899999856948853"
     },
     {
         "rev": "workspace",
         "step": "8",
-        "timestamp": "1623771563559",
-        "val_accuracy": "0.8762500286102295"
+        "timestamp": "1623772327171",
+        "val_accuracy": "0.8999999761581421"
     },
     {
         "rev": "workspace",
         "step": "9",
-        "timestamp": "1623771563970",
-        "val_accuracy": "0.9037500023841858"
+        "timestamp": "1623772327590",
+        "val_accuracy": "0.8962500095367432"
+    },
+    {
+        "rev": "workspace",
+        "step": "10",
+        "timestamp": "1623772328018",
+        "val_accuracy": "0.8887500166893005"
+    },
+    {
+        "rev": "workspace",
+        "step": "11",
+        "timestamp": "1623772328450",
+        "val_accuracy": "0.8974999785423279"
     }
 ]
     },
@@ -120,64 +132,76 @@
     "data": {
         "values": [
     {
-        "loss": "0.68803870677948",
+        "loss": "0.6647169589996338",
         "rev": "workspace",
         "step": "0",
-        "timestamp": "1623771560336"
+        "timestamp": "1623772323843"
     },
     {
-        "loss": "0.35814255475997925",
+        "loss": "0.33567336201667786",
         "rev": "workspace",
         "step": "1",
-        "timestamp": "1623771560735"
+        "timestamp": "1623772324244"
     },
     {
-        "loss": "0.29071417450904846",
+        "loss": "0.3091001808643341",
         "rev": "workspace",
         "step": "2",
-        "timestamp": "1623771561134"
+        "timestamp": "1623772324664"
     },
     {
-        "loss": "0.22850936651229858",
+        "loss": "0.26170527935028076",
         "rev": "workspace",
         "step": "3",
-        "timestamp": "1623771561537"
+        "timestamp": "1623772325075"
     },
     {
-        "loss": "0.19766122102737427",
+        "loss": "0.21042656898498535",
         "rev": "workspace",
         "step": "4",
-        "timestamp": "1623771561933"
+        "timestamp": "1623772325473"
     },
     {
-        "loss": "0.18777646124362946",
+        "loss": "0.1751987487077713",
         "rev": "workspace",
         "step": "5",
-        "timestamp": "1623771562341"
+        "timestamp": "1623772325891"
     },
     {
-        "loss": "0.1756281554698944",
+        "loss": "0.16193363070487976",
         "rev": "workspace",
         "step": "6",
-        "timestamp": "1623771562741"
+        "timestamp": "1623772326305"
     },
     {
-        "loss": "0.13665074110031128",
+        "loss": "0.1383807212114334",
         "rev": "workspace",
         "step": "7",
-        "timestamp": "1623771563146"
+        "timestamp": "1623772326738"
     },
     {
-        "loss": "0.11739043146371841",
+        "loss": "0.12965868413448334",
         "rev": "workspace",
         "step": "8",
-        "timestamp": "1623771563559"
+        "timestamp": "1623772327171"
     },
     {
-        "loss": "0.11185138672590256",
+        "loss": "0.11733823269605637",
         "rev": "workspace",
         "step": "9",
-        "timestamp": "1623771563969"
+        "timestamp": "1623772327590"
+    },
+    {
+        "loss": "0.11007554829120636",
+        "rev": "workspace",
+        "step": "10",
+        "timestamp": "1623772328018"
+    },
+    {
+        "loss": "0.09753655642271042",
+        "rev": "workspace",
+        "step": "11",
+        "timestamp": "1623772328450"
     }
 ]
     },
@@ -217,64 +241,76 @@
     "data": {
         "values": [
     {
+        "accuracy": "0.753000020980835",
         "rev": "workspace",
         "step": "0",
-        "timestamp": "1623771560336",
-        "val_loss": "0.7417951822280884"
+        "timestamp": "1623772323843"
     },
     {
+        "accuracy": "0.8525000214576721",
         "rev": "workspace",
         "step": "1",
-        "timestamp": "1623771560736",
-        "val_loss": "0.38901078701019287"
+        "timestamp": "1623772324244"
     },
     {
+        "accuracy": "0.8715000152587891",
         "rev": "workspace",
         "step": "2",
-        "timestamp": "1623771561134",
-        "val_loss": "0.24958732724189758"
+        "timestamp": "1623772324664"
     },
     {
+        "accuracy": "0.9010000228881836",
         "rev": "workspace",
         "step": "3",
-        "timestamp": "1623771561537",
-        "val_loss": "0.2491830438375473"
+        "timestamp": "1623772325075"
     },
     {
+        "accuracy": "0.9169999957084656",
         "rev": "workspace",
         "step": "4",
-        "timestamp": "1623771561933",
-        "val_loss": "0.27479287981987"
+        "timestamp": "1623772325473"
     },
     {
+        "accuracy": "0.9279999732971191",
         "rev": "workspace",
         "step": "5",
-        "timestamp": "1623771562342",
-        "val_loss": "0.3899626135826111"
+        "timestamp": "1623772325891"
     },
     {
+        "accuracy": "0.934499979019165",
         "rev": "workspace",
         "step": "6",
-        "timestamp": "1623771562741",
-        "val_loss": "0.28792232275009155"
+        "timestamp": "1623772326305"
     },
     {
+        "accuracy": "0.9434999823570251",
         "rev": "workspace",
         "step": "7",
-        "timestamp": "1623771563146",
-        "val_loss": "0.27417853474617004"
+        "timestamp": "1623772326738"
     },
     {
+        "accuracy": "0.9455000162124634",
         "rev": "workspace",
         "step": "8",
-        "timestamp": "1623771563559",
-        "val_loss": "0.4200311005115509"
+        "timestamp": "1623772327171"
     },
     {
+        "accuracy": "0.9539999961853027",
         "rev": "workspace",
         "step": "9",
-        "timestamp": "1623771563969",
-        "val_loss": "0.3761231303215027"
+        "timestamp": "1623772327590"
+    },
+    {
+        "accuracy": "0.9610000252723694",
+        "rev": "workspace",
+        "step": "10",
+        "timestamp": "1623772328018"
+    },
+    {
+        "accuracy": "0.9639999866485596",
+        "rev": "workspace",
+        "step": "11",
+        "timestamp": "1623772328450"
     }
 ]
     },
@@ -291,9 +327,9 @@
             "title": "step"
         },
         "y": {
-            "field": "val_loss",
+            "field": "accuracy",
             "type": "quantitative",
-            "title": "val_loss",
+            "title": "accuracy",
             "scale": {
                 "zero": false
             }
@@ -314,64 +350,76 @@
     "data": {
         "values": [
     {
-        "accuracy": "0.7549999952316284",
         "rev": "workspace",
         "step": "0",
-        "timestamp": "1623771560336"
+        "timestamp": "1623772323844",
+        "val_loss": "0.34612372517585754"
     },
     {
-        "accuracy": "0.8519999980926514",
         "rev": "workspace",
         "step": "1",
-        "timestamp": "1623771560735"
+        "timestamp": "1623772324244",
+        "val_loss": "0.2524780035018921"
     },
     {
-        "accuracy": "0.8830000162124634",
         "rev": "workspace",
         "step": "2",
-        "timestamp": "1623771561134"
+        "timestamp": "1623772324664",
+        "val_loss": "0.24388031661510468"
     },
     {
-        "accuracy": "0.9100000262260437",
         "rev": "workspace",
         "step": "3",
-        "timestamp": "1623771561537"
+        "timestamp": "1623772325075",
+        "val_loss": "0.25794339179992676"
     },
     {
-        "accuracy": "0.9204999804496765",
         "rev": "workspace",
         "step": "4",
-        "timestamp": "1623771561933"
+        "timestamp": "1623772325473",
+        "val_loss": "0.32106685638427734"
     },
     {
-        "accuracy": "0.9279999732971191",
         "rev": "workspace",
         "step": "5",
-        "timestamp": "1623771562342"
+        "timestamp": "1623772325891",
+        "val_loss": "0.38478797674179077"
     },
     {
-        "accuracy": "0.9330000281333923",
         "rev": "workspace",
         "step": "6",
-        "timestamp": "1623771562741"
+        "timestamp": "1623772326305",
+        "val_loss": "0.27411994338035583"
     },
     {
-        "accuracy": "0.9484999775886536",
         "rev": "workspace",
         "step": "7",
-        "timestamp": "1623771563146"
+        "timestamp": "1623772326739",
+        "val_loss": "0.306049108505249"
     },
     {
-        "accuracy": "0.9520000219345093",
         "rev": "workspace",
         "step": "8",
-        "timestamp": "1623771563559"
+        "timestamp": "1623772327171",
+        "val_loss": "0.326854407787323"
     },
     {
-        "accuracy": "0.9524999856948853",
         "rev": "workspace",
         "step": "9",
-        "timestamp": "1623771563969"
+        "timestamp": "1623772327590",
+        "val_loss": "0.32202205061912537"
+    },
+    {
+        "rev": "workspace",
+        "step": "10",
+        "timestamp": "1623772328018",
+        "val_loss": "0.40406277775764465"
+    },
+    {
+        "rev": "workspace",
+        "step": "11",
+        "timestamp": "1623772328450",
+        "val_loss": "0.3754774034023285"
     }
 ]
     },
@@ -388,9 +436,9 @@
             "title": "step"
         },
         "y": {
-            "field": "accuracy",
+            "field": "val_loss",
             "type": "quantitative",
-            "title": "accuracy",
+            "title": "val_loss",
             "scale": {
                 "zero": false
             }
